Angular -Login -Register -Welcome

--- a/Job_Recuritment/Job_Recuritment/src/main/resources/application.properties
+++ b/Job_Recuritment/Job_Recuritment/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Logging (optional)
 logging.level.org.hibernate.SQL=debug
@@ -16,8 +16,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # SMTP Server Settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sohankalburgi2004.com
-spring.mail.password=your-password
+spring.mail.username=eshwarsakg07@gmail.com
+spring.mail.password=vjcf cbqk wmwa dpcs
 
 # Additional SMTP Settings (Optional)
 spring.mail.properties.mail.smtp.auth=true
