--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
