Added Admin, Grad, Em, Job dash board 23rd May-II

--- a/NewFirstevaluation/eclipse Job Recruitment/OnlineRecruitment/OnlineRecruitment/bin/src/main/resources/application.properties
+++ b/NewFirstevaluation/eclipse Job Recruitment/OnlineRecruitment/OnlineRecruitment/bin/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=OnlineRecruitment
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/onlinerecuritment
 spring.datasource.username=root
-spring.datasource.password=Wb9748636545#
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
