final backend and 80% of frontend

--- a/NewFirstevaluation/Frontend_Angular/angular.json
+++ b/NewFirstevaluation/Frontend_Angular/angular.json
@@ -92,7 +92,8 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/dist/files"
             ],
             "styles": [
               "src/styles.css"
