--- a/NewFirstevaluation/Frontend_Angular/package.json
+++ b/NewFirstevaluation/Frontend_Angular/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "ng2-pdf-viewer": "^10.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
