--- a/NewFirstevaluation/eclipse Job Recruitment/OnlineRecruitment/OnlineRecruitment/bin/src/main/resources/application.properties
+++ b/NewFirstevaluation/eclipse Job Recruitment/OnlineRecruitment/OnlineRecruitment/bin/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.mail.password=vjcf cbqk wmwa dpcs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
